Main_Folder/MY_PROJECTS/twitter_clone/src/App.scss
/* ... */
.hidden500 {
	display: none !important;
	@media only screen and (500px<=width) {
		display: flex !important;
	}
}

.hidden688 {
	display: none !important;
	@media only screen and (688px<=width) {
		display: flex !important;
	}
}

.hidden705 {
	display: none !important;
	@media only screen and (705px<=width) {
		display: flex !important;
	}
}

.hidden-More {
	display: none !important;
}

.wrappers {
	width: 100%;
	height: 100%;
	margin: 0;
	padding: 0;
}
.wrappers--flex {
	display: flex;
	width: 100%;
	height: 100%;
	margin: 0;
	padding: 0;
}
.wrappers--flex-column {
	display: flex;
	flex-direction: column;
}

.App {
	display: flex;
	flex-direction: column;
	height: 100vh;
	margin: 0;
	padding: 0;
	overflow-x: hidden;
	//overflow-y: scroll;
	font-family: chirp;
	@media only screen and (500px<=width) {
		flex-direction: row;
		overflow-x: scroll;
	}
}

/* .twitter-timeline{
	border-bottom: var(--main-border-style);
} */

.nav-container {
	//named based on desktop position..will be at bottom on mobile viewports
	z-index: 3;
	position: sticky;
	//overflow-y: visible;
	order: 2;
	//top: calc(100vh - 53.5px);
	display: flex;
	bottom: 0px;
	// /* margin: 0; */ commented out to prevent fixed position being pushed to top
	margin: 0;
	padding: 0;
	border-top: var(--main-border-style);
	min-height: 53.5px;
	max-height: 53.5px; //both heights required + purposefully diff from twitter actual height in order to avoid creating wrapper inside nav
	width: 100%;
	box-sizing: border-box;
	background-color: white;

	@media only screen and (500px<=width) {
		position: relative;
		flex-direction: column;
		flex: 1 0 auto;
		height: 100vh;
		width: 68px;
		border-top: 0;
		margin: 0;
		padding: 0 4px;
		order: unset;
	}
	@media only screen and(600px<=width) {
		position: relative;
		box-sizing: border-box;
		padding: 0;
		width: 88px;
		//max-width: 88px;
		flex: 1 0 auto;
		border: none;
	}

	@media only screen and(688px<=width) {
		width: auto;
		flex: 1 1 auto;
		border: none;
		align-items: baseline;
	}

	@media only screen and(988px<=width) {
		width: 68px;
		flex: 1 0 auto;
		border: none;
	}

	@media screen and (1008px<=width) {
		width: 78px;
		flex: 1 0 auto;
	}
	@media screen and (1025px<=width) {
		width: 96.5px;
		align-items: end;
		//flex:1 0 auto;
	}
}

.nav {
	width: 100%;
	height: 100%;
	margin: 0;
	padding: 0;

	@media only screen and (500px<=width) {
		display: flex;
		flex-direction: column;
		align-items: center;
		height: 582px;
		margin: 0 0 4px 0;
	}
	@media only screen and (600px<=width) {
		box-sizing: border-box;
		width: 88px;
		padding: 0 8px;
		height: 582px;
	}

	@media only screen and (688px<=width) {
		width: 88px;
		padding: 0;
		height: 582px;
		align-self: flex-end;
	}

	@media screen and (1008px<=width) {
		width: 68px;
	}
	@media screen and (1025px<=width) {
		width: 88px;
		//flex:1 0 auto;
	}

	&_twitter-logo-box {
		display: none;

		@media only screen and (500px<=width) {
			width: 100%;
			height: 56px;
			display: flex;
			justify-content: center;
			align-items: center;
			margin: 0;
			padding: 2px 0;
			box-sizing: border-box;
		}
	}

	&_twitter-logo {
		display: flex;

		@media only screen and (500px<=width) {
			width: 50px;
			height: 30px;
			border-radius: 0;
			padding: 0;
			margin: 0;
			fill: rgb(29, 155, 240);
		}
	}

	&_ul {
		display: flex;
		justify-content: space-evenly;
		align-items: end;
		list-style: none;
		margin: 0;
		padding: 0;
		height: 100%;

		@media only screen and (500px<=width) {
			width: 60px;
			height: 524.25px;
			flex-direction: column;
			align-items: center;
			margin: 2px 0 0 0;
		}

		@media only screen and (600px<=width) {
			width: 100%;
		}
	}

	&_li {
		display: flex;
		justify-content: center;
		align-items: center;
		margin: 0;
		padding: 0;
		width: 100%;
		height: 50.5px;

		@media only screen and (500px<=width) {
			height: 50.25px;
			padding: 4px;
		}

		@media only screen and (688px<=width) {
			margin: 0 0;
		}
	}

	&_li--first-item {
		@extend .nav_li;

		@media only screen and (500px<=width) {
			margin-top: 0;
		}
	}

	&_a {
		display: flex;
		justify-content: center;
		align-items: center;
		text-decoration: none;
	}

	&_nav-icons {
		width: 26.25px;
		height: 26.25px;
		border-radius: 50%;
		padding: 8px;
		overflow: visible;
	}

	&_nav-icons:active {
		background-color: lightgray;
	}
}


button:hover {
	background-color: #1d8ad3;
}

.tweet-btn-container {
	display: flex;
	justify-content: center;
	align-items: center;
	position: fixed;
	box-sizing: border-box;
	height: 56px;
	width: 56px;
	aspect-ratio: 1/1;
	right: 20px;
	bottom: 73px;
	padding: 0;
	//border: solid red;

	@media screen and(500px<=width) {
		display: flex;
		position: relative;
		justify-content: center;
		align-items: center;
		height: 52px;
		width: 60px;
		align-self: center;
		//aspect-ratio: 1/1;
		margin: 4px 0 0 0;
		padding: 0;
		box-sizing: border-box;
		right: initial;
		bottom: initial;
		/* background-color: rgb(29, 155, 240);
	border-radius: 50%; */
	}

	@media screen and (600px<=width) {
	}

	@media screen and(688px<=width) {
		width: 88px;
		margin: 16px 0 0 0;
		padding: 0;
		align-self: flex-end;
		box-sizing: border-box;
	}

	@media screen and(1008px<=width) {
		width: 68px;
	}

	@media screen and(1024px<=width) {
		width: 88px;
		margin-right: 1px;
	}
}
.tweet-btn-wrapper {
	width: 50px;
	height: 50px;

	justify-content: center;
	align-items: center;
	box-sizing: content-box;
	background-color: rgb(29, 155, 240);
	border-radius: 50%;
	box-shadow: 0px 1px 8px 1px rgba(101, 119, 134, 0.4);

	@media screen and(500px<=width) {
		//background-color: green;
		display: flex;
		//border:1px solid green;
		height: 52px;
		width: 52px;
		/* min-height: 52px;
		min-height: 52px; */
		aspect-ratio: 1/1;
		// margin: 4px 0 4px 4px;
		//margin-bottom: 4px;
		box-shadow: none;
	}


}

.write-tweet-icon {
	width: 24px;
	height: 24px;
	margin: 0;
	padding: 0;
	fill: white;
	position: absolute;
	//overflow: visible;
}
/* ... */

